<resources>
    <string name="app_name">Culture Pass</string>
    <string name="web_view_title">Qatar Museums</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="view_details"><u>View Details</u></string>
    <string name="events">EVENTS</string>
    <string name="details">DETAILS</string>
    <string name="action_settings">Settings</string>
    <string name="everyday_from">Everyday From</string>
    <string name="to">to</string>
    <string name="or">or</string>
    <string name="use_qr_scanner"><u>Use the QR Scanner</u></string>
    <string name="use_the_keypad"><u>Use the Keypad</u></string>
    <string name="title_dining">Dining</string>
    <string name="title_gift_shop">Gift Shop</string>
    <string name="title_culture_pass">Culture Pass</string>
    <string name="title_more">More</string>
    <string name="sidemenu_exhibition_text">Exhibitions</string>
    <string name="sidemenu_text">Sidemenu</string>
    <string name="sidemenu_events_text">Events</string>
    <string name="sidemenu_education_text">Education</string>
    <string name="sidemenu_tour_guide_text">Tour Guide</string>
    <string name="sidemenu_heritage_text">Heritage Sites</string>
    <string name="sidemenu_public_arts_text">Public Arts</string>
    <string name="sidemenu_dining_text">Dining</string>
    <string name="sidemenu_gift_shop_text">Gift Shop</string>
    <string name="sidemenu_parks_text">Parks</string>
    <string name="toolbar_title_key">TOOLBAR_TITLE</string>
    <string name="new_open">NOW OPEN</string>
    <string name="closed">CLOSED</string>
    <string name="notifications">Notifications</string>
    <string name="location_title">LOCATION</string>
    <string name="contact_title">CONTACT</string>
    <string name="settings_activity_tittle">SETTINGS</string>
    <string name="calendar_activity_tittle">CALENDAR</string>
    <string name="education_calendar_activity_tittle">EDUCATION CALENDAR</string>
    <string name="select_language_text">Select App Language</string>
    <string name="english">English</string>
    <string name="arabic">عربى</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="reset_to_default">Reset to Default</string>
    <string name="apply">Apply</string>
    <string name="add_to_calendar">Add To Calendar</string>
    <string name="register_now">Register Now</string>
    <string name="calendar_dialog_title">Event Name</string>
    <string name="change_language_dialog_title">Change Language?</string>
    <string name="change_language_button_text">Continue</string>
    <string name="museum_about_text">About</string>
    <string name="museum_collection_text">Collections</string>
    <string name="change_language_content_text">You will be redirected to home page, after changing the language. Do you want to continue?</string>
    <string name="home_page_mia_title">Museum of Islamic Art (MIA)</string>
    <string name="home_page_national_museum_title">National Museum of Qatar</string>
    <string name="home_page_mathaf_title">Mathaf: Arab Museum of Modern Art</string>
    <string name="home_page_fire_station_title">Garage Gallery, Fire Station</string>
    <string name="home_page_exhibition_title">Exhibition</string>
    <string name="home_page_sports_museum_title">3–2–1 Qatar Olympic and Sports Museum</string>
    <string name="details_page_short_description">Echoes is a prolongation of Al-Muftah’s ongoing research on the recollection of memories and stories that she documents as a continuous autobiography based on personal encounters and family stories.</string>
    <string name="details_page_long_description">The work of Bouthayna Al-Muftah (b. 1987) interrogates stories and practices from Qatari cultural heritage by archiving collective memories and personal encounters using various artistic media including drawing, printmaking and installation.\r\n\r\nEchoe​s is a prolongation of Al-Muftah’s ongoing research on the recollection of memories and stories that she documents as a continuous autobiography based on personal encounters and family stories.\r\n\r\nIn this artistic experiment, she distinctively reflects on the rapid social and cultural changes that have taken place in her surroundings in a short period of time. Al-Muftah utilizes the space to evoke shared local memories and question current local cultural practices visibly influenced by technology with an ever growing focus on individualism. In order to highlight this challenging topic the artist contextualizes the lyrical traditional game ‘tag ‘tag ‘tagya*’ and deconstructs its forms to redefine cultural narratives, offering a symbolic experience in a space in which the past and the present intersect.\r\n\r\nThe artistic process and methodology are prominently prioritized in this space. This is exaggerated by integrating different materials to the project, such as sound, wall mirrors and canvas floor, through which the artist interrogates the perception and the use of traditional collective stories in the context of the contemporary.\r\n\r\n* ‘tag ‘tag ‘tagya is the first phrase of a song used in a traditional group game played by boys and girls from different parts of the Arabian Gulf.\r\n</string>
    <string name="details_page_timing_details">Wednesday, July 11, 2018 – 11:45 to Monday, September 10, 2018 – 11:45</string>
    <string name="details_page_location_details">Mathaf: Arab Museum of Modern Art</string>
    <string name="knowledge_in_action">KNOWLEDGE IN ACTION</string>
    <string name="education_short_description">Our numerous programmes are designed for families, university students and adults.\n\nFind out what\'s on offer and register ahead to secure your place.</string>
    <string name="education_long_description">All of our education programmes provide interactive opportunities. We hope that they create lasting memories and lead to the development of creative, compassionate and engaged individuals.\n\nFor school teachers and educators, we bring custom-made workshops, conferences and trainings to suit their needs. We also focus on working with children to encourage them to explore the world around them, engage with it, and express themselves through creative activities.\n\nAll of our activities align with Qatar Supreme Educational Council Professional Standards for Teachers and National Curriculum Standards.</string>
    <string name="discover_txt">Discover</string>
    <string name="coming_soon_content_map">We are working hard to bring the details at the tip of your fingers.\n\nThe floor maps and object details for this museum will be available soon.\n\nStay Tuned.</string>
    <string name="coming_soon_content">We are working hard to bring the details at the tip of your fingers.\n\nStay Tuned.</string>
    <string name="coming_soon_txt">Coming Soon</string>
    <string name="alert_txt">Alert</string>
    <string name="error_content">Please! Enter the Object Number.</string>
    <string name="location_alert_txt">Something went wrong</string>
    <string name="location_error_content">Unfortunately we cannot open Google Maps.</string>
    <string name="close">Close</string>
    <string name="register_now_content">Thank you for Registering.Further\nDetails will be sent to you on your\nemail</string>
    <string name="opening_timings">OPENING TIMINGS</string>
    <string name="exhibition_timings">EXHIBITION TIMINGS</string>
    <string name="open_in_google_maps">Click here to view location</string>
    <string name="contact_mail">info@mia.org.qa</string>
    <string name="for_more_information_text">For more information and to make a reservation, visit <u>MIA.</u></string>
    <string name="institution">Institution -</string>
    <string name="age_group">Age Group -</string>
    <string name="programme_type">Programme Type -</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="object_search">Object Search</string>
    <string name="obj_text_one">Enter The Object Number</string>
    <string name="obj_text_two">next to</string>
    <string name="obj_text_three">to view the details</string>
    <string name="gift_shop_url">https://inq-online.com/</string>
    <string name="touch_again">Touch again to exit</string>
    <string name="map_navigation_api">http://maps.google.com/maps?q=loc:</string>
    <string name="museum_about">Museum About</string>
    <string name="museum">Museum</string>
    <string name="museum_timings">MUSEUM TIMINGS</string>
    <string name="no_results_text">Coming Soon</string>
    <string name="explore">Explore</string>
    <string name="level">Level</string>
    <string name="alberallo">Alberallo</string>
    <string name="check_network">Check your internet connections</string>
    <string name="collection_details_main_text">As well as being objects of great age and beauty, the ceramics in the museum were also meant to be used.\n\n

From humble kitchen wares to elaborate tile panels, ceramics were a vital part of everyday life in the Islamic world.\n\n

They exemplify the external influences and internal creativity that inspired this flourishing of ceramic design over 12 centuries.</string>
    <string name="culture_pass_description">Qatar Museums Culture Pass gives you discounts, free access and exclusive opportunities across many cultural venues in Qatar and discounts at a wide range of ever expanding list of partners. Best of all, as a member you’re invited to join us in a wide range of exciting creative activities. \n\nGet access by activating your membership today.</string>
    <string name="benefits">benefits</string>
    <string name="culture_pass_benefits"><![CDATA[- 15% DISCOUNT AT QM CAFÉ’S ACROSS ALL VENUES  \n\n- 10% DISCOUNT ON ITEMS IN ALL QM GIFT SHOPS (without minimum purchase)  \n\n- 10% DISCOUNT AT IDAM RESTAURANT AT LUNCH TIME  \n\n- RECEIVE OUR MONTHLY NEWSLETTER TO STAY UP TO DATE ON QM AND PARTNER OFFERINGS  \n\n- GET PREMIER ACCESS TO MEMBERS ONLY TALKS &WORKSHOPS  \n\n- GET EXCLUSIVE INVITATIONS TO QM OPEN HOUSE ACCESS TO OUR WORLD CLASS CALL CENTER 8AM TO 8PM DAILY]]></string>
    <string name="not_a_member_yet"><u>Not A Member Yet?</u></string>
    <string name="become_a_member">BECOME A MEMBER</string>
    <string name="already_a_member"><u>Already A Member?</u></string>
    <string name="log_in">Log In</string>
    <string name="unable_to_fetch_details">Unable to fetch details</string>
    <string name="no_new_notification_yet">No notifications yet.</string>
    <string name="no_events">No Events</string>
    <string name="open_settings">Settings</string>
    <string name="permission_required">Permission Required!</string>
    <string name="runtime_permission">To add events in calendar, allow <b>Qatar Museum App</b> access to your device\'s Calendar.\n\n Tap Settings > Permissions, and turn Calendar on.</string>
    <string name="camera_runtime_permission">To scan QR Code, allow <b>Qatar Museum App</b> access to your device\'s Camera.\n\n Tap Settings > Permissions, and turn Camera on.</string>
    <string name="event_added">Event added to Calendar.</string>
    <string name="local_event_institution">MIA</string>
    <string name="local_event_title">Walk In Gallery Tours</string>
    <string name="local_event_short_description">Join our Museum Guides for a tour of the Museum of Islamic Art\'s oustanding collection of objects, spread over 1,400 years and across three continents. No booking is required to be a part of the tour.</string>
    <string name="oops">Oops!</string>
    <string name="there_is_no_internet">There is no Internet connection</string>
    <string name="please_check_your_internet">Please check your Internet connection</string>
    <string name="try_again">Try again</string>
</resources>