<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qatarmuseums.qatarmuseumsapp.culturepass.CulturePassActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/common_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorBlack"
            android:theme="@style/AppTheme.PopupOverlay"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/toolbar_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:src="@drawable/back_button"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:fontFamily="@font/din_next_lt_pro_regular"
                    android:gravity="center"
                    android:text="@string/title_culture_pass"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/toolbar_title"
                    android:textStyle="bold" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_25">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/din_next_lt_pro_light"
                android:text="@string/culture_pass_description"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_size_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_15">

                <TextView
                    android:id="@+id/location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/din_next_lt_pro_bold"
                    android:text="@string/benefits"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/font_size_18" />

                <LinearLayout
                    android:layout_width="25dp"
                    android:layout_height="3dp"
                    android:layout_marginBottom="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:background="@color/colorBlack" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/din_next_lt_pro_light"
                android:text="@string/culture_pass_benefits"
                android:textColor="@color/colorBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/din_next_lt_pro_light"
                    android:text="@string/not_a_member_yet"
                    android:textColor="@color/colorBlack" />

                <Button
                    android:id="@+id/become_a_member_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:background="@drawable/round_corner_black"
                    android:fontFamily="@font/din_next_lt_pro_bold"
                    android:text="@string/become_a_member"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_20"
                    android:fontFamily="@font/din_next_lt_pro_light"
                    android:text="@string/already_a_member"
                    android:textColor="@color/colorBlack" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_15"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:layout_marginStart="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:background="@drawable/round_corner_black"
                    android:fontFamily="@font/din_next_lt_pro_bold"
                    android:text="@string/log_in"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
