<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qatarmuseums.qatarmuseumsapp.webview.WebviewActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/padding_3"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/web_view_title"
                    android:textAlignment="center"
                    android:fontFamily="@font/din_next_lt_pro_regular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_19" />

                <ImageView
                    android:id="@+id/webViewCloseBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/padding_10"
                    android:src="@drawable/toolbar_close" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_webview" />

    <ProgressBar
        android:id="@+id/webViewProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/retry_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_toolbar"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_40"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/din_next_lt_pro_bold"
            android:text="@string/oops"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pading_15"
            android:fontFamily="@font/din_next_lt_pro_light"
            android:text="@string/there_is_no_internet"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/din_next_lt_pro_light"
            android:text="@string/please_check_your_internet"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_18" />

        <Button
            android:id="@+id/retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_25"
            android:background="@drawable/round_corner_black"
            android:fontFamily="@font/din_next_lt_pro_bold"
            android:gravity="center"
            android:paddingEnd="@dimen/pading_30"
            android:paddingStart="@dimen/pading_30"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/settings_page_list_item_text_size" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
