<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qatarmuseums.qatarmuseumsapp.education.EducationActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/education_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            android:theme="@style/AppTheme.PopupOverlay"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/toolbar_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:paddingEnd="@dimen/pading_20"
                    android:paddingStart="@dimen/pading_20"
                    android:src="@drawable/back_button" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_50"
                    android:layout_marginStart="@dimen/margin_50"
                    android:fontFamily="@font/din_regular"
                    android:gravity="center"
                    android:text="@string/sidemenu_education_text"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/toolbar_title"
                    android:textStyle="bold" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin">

            <LinearLayout
                android:id="@+id/short_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/din_regular"
                    android:text="@string/knowledge_in_action"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_18"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="25dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/pading_10"
                    android:background="@color/black" />


                <TextView
                    android:id="@+id/short_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:fontFamily="@font/din_next_lt_pro_light"
                    android:text="@string/education_short_description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_19" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/youtube_player_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/short_description_layout"
                android:orientation="vertical">

                <com.pierfrancescosoffritti.androidyoutubeplayer.player.YouTubePlayerView
                    android:id="@+id/youtube_player_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/long_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/youtube_player_layout">

                <TextView
                    android:id="@+id/long_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:fontFamily="@font/din_next_lt_pro_light"
                    android:text="@string/education_long_description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/long_description_layout"
                android:paddingBottom="@dimen/pading_10">

                <Button
                    android:id="@+id/discover_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/pading_25"
                    android:background="@drawable/round_corner_skyblue"
                    android:fontFamily="@font/din_next_lt_pro_bold"
                    android:text="@string/discover_txt"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_14" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
